# cpf-serverless-python-azure

./: CONTRIBUTING.md  README.md  host.json  pyproject.toml  requirements.txt  trigger.txt
docs/: deployment-guide.md  environment-variables.md  local-development.md
src/core/models/: http_models.py
src/core/utils/: logger.py  rate_limiter.py
src/functions/cpf_validation/: __init__.py  function.json
tests/: conftest.py
tests/unit/: test_cpf_validator.py  test_function_app.py  test_rate_limiter.py
